--- a/GenderApp/GenderApp.csproj
+++ b/GenderApp/GenderApp.csproj
@@ -146,6 +146,11 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Capture.PNG" />
+    <Content Include="Logo.scale-100.png" />
+    <Content Include="SmallLogo.scale-100.png" />
+    <Content Include="SplashScreen.scale-100.png" />
+    <Content Include="StoreLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
